--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.12"
 aiogram = "^3.11.0"
 pydantic-settings = "^2.4.0"
+httplib2 = "^0.22.0"
+apiclient = "^1.0.4"
+oauth2client = "^4.1.3"
+pygsheets = "^2.0.6"
 
 
 [build-system]
