add CACHE_CONFIG__URL to .env.template

--- a/bot/.env.template
+++ b/bot/.env.template
@@ -1,3 +1,4 @@
 TOKEN_BOT="YOUR TOKEN BOT"
 CRED_FILE="YOUR CRED FILE(INFO ABOUT YOUR SERVICE ACCOUNT FOR AUTHORIZE AND CONNECT TO GOOGLE SHEET)"
 URL_TABLE="YOUR GOOGLE TABLE URL"
+CACHE_CONFIG__URL="REDIS URL"
