--- a/bot/.env.template
+++ b/bot/.env.template
@@ -1,4 +1,4 @@
-TOKEN_BOT="YOUR TOKEN BOT"
-CRED_FILE="YOUR CRED FILE(INFO ABOUT YOUR SERVICE ACCOUNT FOR AUTHORIZE AND CONNECT TO GOOGLE SHEET)"
-URL_TABLE="YOUR GOOGLE TABLE URL"
+BOT_CONFIG__TOKEN_BOT="YOUR TOKEN BOT"
+TABLE_CONFIG__CRED_FILE="YOUR CRED FILE(INFO ABOUT YOUR SERVICE ACCOUNT FOR AUTHORIZE AND CONNECT TO GOOGLE SHEET)"
+TABLE_CONFIG__URL_TABLE="YOUR GOOGLE TABLE URL"
 CACHE_CONFIG__URL="REDIS URL"
