--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ oauth2client = "^4.1.3"
 pygsheets = "^2.0.6"
 redis = "^5.1.1"
 apscheduler = "^3.10.4"
+aiolimiter = "^1.1.0"
 
 
 [build-system]
