--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,23 @@ services:
       - ${IMAGE_CONFIG__PATH}:/cros_bot/cros_photo
     environment:
       - PATH_IMAGES=/cros_bot/cros_photo
+    networks:
+      - cross_network
   
   redis:
     image: redis:7.4.1-alpine
     container_name: cros_db
     restart: always 
-    ports:
-      - "6379:6379"
     volumes:
       - redis-data:/data
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    networks:
+      - cross_network
 
+
+networks:
+  cross_network:
+    driver: bridge
 
 volumes:
   redis-data:
