--- a/bot/.env.template
+++ b/bot/.env.template
@@ -3,4 +3,4 @@ TABLE_CONFIG__CRED_FILE="YOUR CRED FILE(INFO ABOUT YOUR SERVICE ACCOUNT FOR AUTH
 TABLE_CONFIG__URL_TABLE="YOUR GOOGLE TABLE URL"
 CACHE_CONFIG__URL="REDIS URL"
 IMAGE_CONFIG__PATH="FULL PATH TO YOUR FOLDER WITH IMAGES"
-REDIS_PASSWORD="YOUR REDIS PASSWORD"
+CACHE_CONFIG__PASSWORD="YOUR REDIS PASSWORD"
