--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,21 @@ services:
       - ${IMAGE_CONFIG__PATH}:/cros_bot/cros_photo
     environment:
       - PATH_IMAGES=/cros_bot/cros_photo
-    networks:
-      - cross_network
-  
-  redis:
-    image: redis:7.4.1-alpine
-    container_name: cros_db
-    restart: always 
-    volumes:
-      - redis-data:/data
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+      - TZ=Europe/Moscow
     networks:
       - cross_network
 
+  redis:
+    image: redis:7.4.1-alpine
+    container_name: cros_db
+    restart: always
+    environment:
+      - CACHE_CONFIG__PASSWORD=${CACHE_CONFIG__PASSWORD}
+    volumes:
+      - redis-data:/data
+    command: ["redis-server", "--requirepass", "${CACHE_CONFIG__PASSWORD}"]
+    networks:
+      - cross_network
 
 networks:
   cross_network:
@@ -30,6 +32,4 @@ networks:
 
 volumes:
   redis-data:
-    
-    
 
