big update: test

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,9 @@ TABLE_CONFIG__URL_TABLE="YOUR GOOGLE TABLE URL"
 CACHE_CONFIG__URL="REDIS URL"
 IMAGE_CONFIG__PATH="FULL PATH TO YOUR FOLDER WITH IMAGES"
 CACHE_CONFIG__PASSWORD="YOUR REDIS PASSWORD IF NEEDED"
+
+ADMIN_BOT_CONFIG__TOKEN_BOT="ADMIN TOKEN BOT"
+ADMIN_CONFIG__SUPER_ADMIN_ID="SUPER ADMIN ID"
+ADMIN_CONFIG__INITIAL_IDS="ADMIN IDS"
+ADMIN_IMAGE_CONFIG__PATH="IF NEEDED"
+
