--- a/admin_bot/Dockerfile
+++ b/admin_bot/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.12.0-slim
+FROM python:3.12-slim
 
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED=1\
+    PYTHONDONTWRITEBYTECODE=1
 
-WORKDIR /cros_bot
+WORKDIR /admin_bot
 
 RUN pip install --upgrade pip wheel
 
@@ -11,6 +11,8 @@ COPY requirements.txt ./requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY bot .
+COPY admin_bot .
+
+COPY shared ./shared
 
 CMD ["python", "main.py"]
