--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,52 @@
-aiofiles==23.2.1 ; python_version >= "3.12" and python_version < "4.0"
-aiogram==3.11.0 ; python_version >= "3.12" and python_version < "4.0"
-aiohappyeyeballs==2.3.5 ; python_version >= "3.12" and python_version < "4.0"
-aiohttp==3.10.3 ; python_version >= "3.12" and python_version < "4.0"
-aiolimiter==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
-aiosignal==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+aiofiles==24.1.0 ; python_version >= "3.12" and python_version < "4.0"
+aiogram==3.21.0 ; python_version >= "3.12" and python_version < "4.0"
+aiohappyeyeballs==2.6.1 ; python_version >= "3.12" and python_version < "4.0"
+aiohttp==3.12.14 ; python_version >= "3.12" and python_version < "4.0"
+aiolimiter==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
+aiosignal==1.4.0 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 apiclient==1.0.4 ; python_version >= "3.12" and python_version < "4.0"
-apscheduler==3.10.4 ; python_version >= "3.12" and python_version < "4.0"
-attrs==24.2.0 ; python_version >= "3.12" and python_version < "4.0"
-cachetools==5.5.0 ; python_version >= "3.12" and python_version < "4.0"
-certifi==2024.7.4 ; python_version >= "3.12" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.12" and python_version < "4.0"
-frozenlist==1.4.1 ; python_version >= "3.12" and python_version < "4.0"
-google-api-core==2.19.2 ; python_version >= "3.12" and python_version < "4.0"
-google-api-python-client==2.144.0 ; python_version >= "3.12" and python_version < "4.0"
+apscheduler==3.11.0 ; python_version >= "3.12" and python_version < "4.0"
+attrs==25.3.0 ; python_version >= "3.12" and python_version < "4.0"
+cachetools==5.5.2 ; python_version >= "3.12" and python_version < "4.0"
+certifi==2025.7.9 ; python_version >= "3.12" and python_version < "4.0"
+charset-normalizer==3.4.2 ; python_version >= "3.12" and python_version < "4.0"
+docker==7.1.0 ; python_version >= "3.12" and python_version < "4.0"
+frozenlist==1.7.0 ; python_version >= "3.12" and python_version < "4.0"
+google-api-core==2.25.1 ; python_version >= "3.12" and python_version < "4.0"
+google-api-python-client==2.176.0 ; python_version >= "3.12" and python_version < "4.0"
 google-auth-httplib2==0.2.0 ; python_version >= "3.12" and python_version < "4.0"
-google-auth-oauthlib==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
-google-auth==2.34.0 ; python_version >= "3.12" and python_version < "4.0"
-googleapis-common-protos==1.65.0 ; python_version >= "3.12" and python_version < "4.0"
+google-auth-oauthlib==1.2.2 ; python_version >= "3.12" and python_version < "4.0"
+google-auth==2.40.3 ; python_version >= "3.12" and python_version < "4.0"
+googleapis-common-protos==1.70.0 ; python_version >= "3.12" and python_version < "4.0"
 httplib2==0.22.0 ; python_version >= "3.12" and python_version < "4.0"
-idna==3.7 ; python_version >= "3.12" and python_version < "4.0"
+idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 magic-filter==1.0.12 ; python_version >= "3.12" and python_version < "4.0"
-multidict==6.0.5 ; python_version >= "3.12" and python_version < "4.0"
+multidict==6.6.3 ; python_version >= "3.12" and python_version < "4.0"
 oauth2client==4.1.3 ; python_version >= "3.12" and python_version < "4.0"
-oauthlib==3.2.2 ; python_version >= "3.12" and python_version < "4.0"
-proto-plus==1.24.0 ; python_version >= "3.12" and python_version < "4.0"
-protobuf==5.28.0 ; python_version >= "3.12" and python_version < "4.0"
-pyasn1-modules==0.4.0 ; python_version >= "3.12" and python_version < "4.0"
-pyasn1==0.6.0 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-core==2.20.1 ; python_version >= "3.12" and python_version < "4.0"
-pydantic-settings==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
-pydantic==2.8.2 ; python_version >= "3.12" and python_version < "4.0"
+oauthlib==3.3.1 ; python_version >= "3.12" and python_version < "4.0"
+propcache==0.3.2 ; python_version >= "3.12" and python_version < "4.0"
+proto-plus==1.26.1 ; python_version >= "3.12" and python_version < "4.0"
+protobuf==6.31.1 ; python_version >= "3.12" and python_version < "4.0"
+pyasn1-modules==0.4.2 ; python_version >= "3.12" and python_version < "4.0"
+pyasn1==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-core==2.33.2 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-settings==2.10.1 ; python_version >= "3.12" and python_version < "4.0"
+pydantic==2.11.7 ; python_version >= "3.12" and python_version < "4.0"
 pygsheets==2.0.6 ; python_version >= "3.12" and python_version < "4.0"
-pyparsing==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
-python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
-pytz==2024.2 ; python_version >= "3.12" and python_version < "4.0"
-redis==5.1.1 ; python_version >= "3.12" and python_version < "4.0"
+pyjwt==2.9.0 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing==3.2.3 ; python_version >= "3.12" and python_version < "4.0"
+python-dotenv==1.1.1 ; python_version >= "3.12" and python_version < "4.0"
+pywin32==311 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
+redis==5.3.0 ; python_version >= "3.12" and python_version < "4.0"
 requests-oauthlib==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
-rsa==4.9 ; python_version >= "3.12" and python_version < "4"
-six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
-tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
-tzlocal==5.2 ; python_version >= "3.12" and python_version < "4.0"
-uritemplate==4.1.1 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.2.2 ; python_version >= "3.12" and python_version < "4.0"
-yarl==1.9.4 ; python_version >= "3.12" and python_version < "4.0"
+requests==2.32.4 ; python_version >= "3.12" and python_version < "4.0"
+rsa==4.9.1 ; python_version >= "3.12" and python_version < "4"
+six==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.14.1 ; python_version >= "3.12" and python_version < "4.0"
+typing-inspection==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2025.2 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
+tzlocal==5.3.1 ; python_version >= "3.12" and python_version < "4.0"
+uritemplate==4.2.0 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.5.0 ; python_version >= "3.12" and python_version < "4.0"
+yarl==1.20.1 ; python_version >= "3.12" and python_version < "4.0"
