big update: test

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,5 @@ ADMIN_CONFIG__SUPER_ADMIN_ID="SUPER ADMIN ID"
 ADMIN_CONFIG__INITIAL_IDS="ADMIN IDS"
 ADMIN_IMAGE_CONFIG__PATH="IF NEEDED"
 
+CLOSEST_DATE_CONFIG__DATE="CLOSEST_DATE_CONFIG__DATE"
+YUAN_RATE_CONFIG__YUAN_RATE="YUAN_RATE_CONFIG__YUAN_RATE"
